# ParquetViewer

./: .gitignore  CMakeLists.txt  README.md
packaging/linux/: parquet-viewer.desktop
src/: FileTab.cpp  FileTab.h  FilterBuilderWidget.cpp  FilterBuilderWidget.h  FilterCondition.h  MainWindow.cpp  MainWindow.h  ParquetDocument.cpp  ParquetDocument.h  ParquetTableModel.cpp  ParquetTableModel.h  main.cpp
